Update: 代码架构 Fix: config配置覆盖默认配置

--- a/template/fuck.html
+++ b/template/fuck.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h3>这里没有使用 {{lang}} ，屑屑</h3>
-<p>扫的多小心你妈买菜超级加倍</p>
+<p>请欣赏老八正义宣言</p>
+<audio autoplay src="/static/znn.mp3" controls loop></audio>
 </body>
 </html>
