--- a/template/base.html
+++ b/template/base.html
@@ -1,31 +1,15 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
-<head>
-    {% block head %}
-    <title>{% block title %}Aniode{% endblock %}</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <script src="/static/js/jquery-3.4.1.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/css/font-awesome.min.css">
-    {% endblock %}
-</head>
-<body>
-    <nav class="navbar navbar-expand-md bg-info fixed-top">
-        <a class="navbar-brand" href="/">Aniode</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-top" aria-controls="navbar-top">
-            <i class="fa fa-bars fa-fw"></i>
-        </button>
-        <div class="navbar-collapse collapse flex-right" id="navbar-top">
-            <ul class="navbar-nav">
-                <a class="nav-item" href="#">sas</a>
-                <a class="nav-item" href="#">abc</a>
-            </ul>
+<!DOCTYPE HTML>
+<html lang="zh">
+    <head>
+        <title>{% block title %}模板{% endblock %}</title>
+        <meta charset="UTF-8">
+        {% block head %}
+        <link rel="stylesheet" href="/static/css/style.css">
+        {% endblock %}
+    </head>
+    <body>
+        <div class="app">
+            {% block body %}{% endblock %}
         </div>
-    </nav>
-    <div class="navbar-block"></div>
-    {% block content %}{% endblock %}
-</body>
+    </body>
 </html>
