--- a/template/index.html
+++ b/template/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
+    <title>{% block title %}Hello world{% endblock %}</title>
+    {% block head %}
     <meta charset="UTF-8">
-    <title>Hello world</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="theme-color" content="#3F51B5">
     <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/static/css/black.css">
+    {% endblock %}
 </head>
+<script>
+var theme = document.getElementsByTagName("meta")["theme-color"]
+setTimeout(function (){
+    theme.setAttribute("content", "#000000")
+}, 10000)
+</script>
 <body>
-<h1 style="align-content: center">Welcome</h1>
+{% block body %}
+<h1 style="align-content: center">成功！</h1>
 <p>当你看到这个页面的时候服务器已经正常运行</p>
 <p>但这上面并没有东西 :(</p>
+<a href="/links">友链</a>
+{% endblock %}
 </body>
 </html>
