Update: rewrite支持跳转到其他网站，修复部分bug

--- a/template/base.html
+++ b/template/base.html
@@ -3,6 +3,7 @@
     <head>
         <title>{% block title %}模板{% endblock %}</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1,minimal-ui">
         {% block head %}
         <link rel="stylesheet" href="/static/css/style.css">
         {% endblock %}
